welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def marquer(){
  baisseBrosse();
  leverBrosse();
}

def faireV(){
  avance(2);
  marquer();
  avance();
  gauche();
  avance();
  marquer();
  droite();
  droite();
  avance();
  gauche();
  avance();
  marquer();
  avance(2);
  gauche();
}


override def run() {
  for(i<-1 to 4){
    faireV();
  }
}